# raytracer

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  rust-toolchain.toml
assets/models/: E30_Final01.mtl
src/: camera.rs  lib.rs  main.rs  model.rs  noise.rs  obj.rs  render.wgsl  renderer.rs  shader.wgsl  skybox.rs
