[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
log = "0.4.25"
wgpu = "24.0.1"
winit = "0.30.8"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }
